add animation zoom in

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,9 @@
 .box-name {
   margin: 2%;
 }
+
+.zoom:hover {
+  transform: scale(
+    1.5
+  ); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+}
